[project]
name = "async7"
version = "0.1.0"
description = ""
authors = [
    {name = "Joe Channing",email = "joseph.channing@ouh.nhs.uk"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "asyncpg (>=0.31.0,<0.32.0)",
    "litestar (>=2.19.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "async7", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
