[project]
name = "async7_controller"
version = "0.1.0"
description = ""
authors = [
    {name = "Joe Channing", email = "jc@f54.uk"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "asyncpg (>=0.31.0,<0.32.0)",
    "uvloop (>=0.22.1,<0.23.0)",
    "fastapi (>=0.128.0,<0.129.0)",
]

[tool.poetry]
packages = [{include = "async7_controller", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "bandit (>=1.9.3,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]
